# recSys.checkkuleogo.org

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/config/: database.py  secrets.json
app/models/: schemas.py
app/schedulers/: scheduler.py
app/services/: cf_rec_sys_service.py  cs_rec_sys_service.py  hybrid_rec_sys_service.py  update_user_mbti_sys_service.py
app/sqlProcedure/: book_data.sql  creat_dummy_data.sql
app/sqlTest/: book_data.sql  like_test.py
