[tool.poetry]
name = "checkkuleogi"
version = "0.1.0"
description = ""
authors = ["myeonginjin <113578420+myeonginjin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
pydantic = {extras = ["dotenv"], version = "^2.9.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
